fix: proceed in frontend sync!
