# apps/packages/apps/digiwf-tasklist/src/api/processDefinitions/processDefinitionApiCalls.ts
@@ -1,15 +1,15 @@
 import {ApiConfig} from "../ApiConfig";
 import {
   FetchUtils,
-  PageServiceDefinitionTO,
-  ServiceDefinitionControllerApiFactory
+  PageProcessDefinitionDto,
+  ProcessDefinitionControllerApiFactory
 } from "@miragon/digiwf-engine-api-internal";
 
 
-export const callGetProcessDefinitionsFromEngine = (page: number, size: number, query?: string): Promise<PageServiceDefinitionTO> => {
+export const callGetProcessDefinitionsFromEngine = (page: number, size: number, query?: string): Promise<PageProcessDefinitionDto> => {
   const cfg = ApiConfig.getAxiosConfig(FetchUtils.getGETConfig());
 
-  return ServiceDefinitionControllerApiFactory(cfg).getServiceDefinitions(page, size, query)
+  return ProcessDefinitionControllerApiFactory(cfg).getServiceDefinitions(page, size, query)
     .then(res => Promise.resolve(res.data))
     .catch(_ => Promise.reject("Die Vorgänge konnten nicht geladen werden. Bitte versuchen Sie es erneut."))
 };
